test-cases/negative/test_157_invalid_type_annotation.lay
# negative test: invalid type annotation syntax
# expected: parser should reject this

the variable x of type is Number


